# yt-dlp-web

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SETUP.md  activate.ps1  app.py  docker-compose.yml  docker-entrypoint.sh  downloader.py  pyproject.toml  requirements-dev.txt  requirements.txt  template.json  test_validation.py  unraid-template.xml
.github/workflows/: build-and-push.yml  docker-build.yml
chrome-extension/: background.js  manifest.json
scripts/: backup-template.ps1  deploy.ps1  start-dev.ps1  test-container.ps1
static/: script.js  style.css
templates/: index.html
tests/: __init__.py
yt_dlp_web/: __init__.py  app.py  downloader.py
