[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-dlp-web"
version = "0.1.0"
description = "A Docker containerized application"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 100
exclude = [
    ".claude",
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
    ".tox",
    ".coverage",
    "htmlcov",
    ".vscode",
    ".idea",
    "node_modules",
    ".env",
    ".DS_Store"
]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E501"]
"tests/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "build",
    "dist"
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = "warning"
reportDuplicateImport = true