[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-dlp-web"
version = "0.1.0"
description = "Web frontend for yt-dlp with custom naming and Docker support"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "aidrak", email = "your-email@example.com"}
]
keywords = ["yt-dlp", "youtube", "download", "web", "flask", "docker", "unraid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "flask>=2.3.0",
    "yt-dlp>=2023.7.6",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/aidrak/yt-dlp-web"
Repository = "https://github.com/aidrak/yt-dlp-web"
Issues = "https://github.com/aidrak/yt-dlp-web/issues"
Documentation = "https://github.com/aidrak/yt-dlp-web#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["yt_dlp_web*"]
exclude = ["tests*"]

[project.scripts]
yt-dlp-web = "yt_dlp_web.app:main"

[tool.ruff]
line-length = 100
exclude = [
    ".claude",
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
    ".tox",
    ".coverage",
    "htmlcov",
    ".vscode",
    ".idea",
    "node_modules",
    ".env",
    ".DS_Store"
]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E501"]
"tests/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "build",
    "dist"
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = "warning"
reportDuplicateImport = true